SERVER-58273 Solve deadlock caused by uninterruptible lock guard in drop db participant command

(cherry picked from commit 2a41fb45f89a9b7b51053f9b448d767ba074684e)